--- a/packages/assets/css/src/scss/_core/_common-resets.scss
+++ b/packages/assets/css/src/scss/_core/_common-resets.scss
@@ -9,15 +9,4 @@
 		padding: 0;
 		list-style: none;
 	}
-
-	h3 {
-		margin: 0;
-	}
-
-	a {
-		&:focus {
-			box-shadow: none;
-			outline: none;
-		}
-	}
 }
