--- a/packages/assets/css/src/scss/_core/_resets.scss
+++ b/packages/assets/css/src/scss/_core/_resets.scss
@@ -6,4 +6,15 @@
 	* {
 		box-sizing: border-box;
 	}
+
+	h3 {
+		margin: 0;
+	}
+
+	a {
+		&:focus {
+			box-shadow: none;
+			outline: none;
+		}
+	}
 }
